--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
-<!DOCTYPE html>
-<meta charset="UTF-8">
-<html lang="pt-br">
-    <head>
-        <title>Olá, faço parte do head</title>
-    </head>
-    <body>
-        <h1>Eu faço parte do body</h1>
-        <h2>Eu sou o subtítulo</h2>
-    </body>
-    <ol>
-        <li>Café</li>
-        <li>Leite</li>
-        <li>Chá</li>
-    </ol>
-    <ul>
-        <li>Café</li>
-        <li>Leite</li>
-        <li>Chá</li>
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mateus Nobre</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
+                    <p class="name">MATEUS NOBRE</p>
+                    <p class="profession">SOFTWARE ENGINEER</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">CONTACT INFO</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 81 99999-9999</li>
+                        <li><i class="fa fa-envelope"></i>MATEUS@GMAIL.COM</li>
+                        <li><i class="fa fa-globe"></i>WWW.MATEUS.COM</li>
+                        <li><i class="fa fa-github"></i>MATEUSNOBREST</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">SKILLS</p>
+                    <ul>
+                        <li><p>HTML5 & CSS3</p></li>
+                        <li><p>JAVASCRIPT</p></li>
+                        <li><p>REACT</p></li>
+                        <li><p>GIT & GITHUB</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">ABOUT ME</div>
+                    <br><br>
+                    <p class="about-me-contents">
+                        I am a Front-end Developer with hands-on experience in React and JavaScript, to design web applications. What started with a simple 'Hello World' has become a fully-fledged passion that only gets more and more exciting.
+                    </p>   
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
