--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
                     </p>   
                 </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experience</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-compoany-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-compoany-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades 02
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
