--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-compoany-name">Empresa 01</p>
+                        <p class="exp-company-name">Empresa 01</p>
                         <p class="exp-time-period">2021-Present</p>
                     </div>
                     <div class="exp-right">
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                     <div class="exp-left">
-                        <p class="exp-compoany-name">Empresa 02</p>
+                        <p class="exp-company-name">Empresa 02</p>
                         <p class="exp-time-period">2017-2020</p>
                     </div>
                     <div class="exp-right">
@@ -70,6 +70,27 @@
                         <p class="exp-desc">
                             Descreva aqui as principais atividades 02
                         </p>
+                    </div>
+                </div>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Education</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Faculdade 01</p>
+                        <p class="education-time-period">2021-Present</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Nome do Curso</p>
+                        <p class="education-desc">Descreva aqui as principais atividades</p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">Curso 02</p>
+                        <p class="educationp-time-period">2017-2020</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Escreva aqui no que se especializou</p>
+                        <p class="education-desc">Descreva aqui as principais atividades 02</p>
                     </div>
                 </div>
             </section>
