--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main class="resume-contents">
@@ -22,9 +29,9 @@
                     <p class="left-title">CONTACT INFO</p>
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 81 99999-9999</li>
-                        <li><i class="fa fa-envelope"></i>MATEUS@GMAIL.COM</li>
-                        <li><i class="fa fa-globe"></i>WWW.MATEUS.COM</li>
-                        <li><i class="fa fa-github"></i>MATEUSNOBREST</li>
+                        <li><i class="fa fa-envelope"></i>mateus@github.com</li>
+                        <li><i class="fa fa-globe"></i>www.mateus.com</li>
+                        <li><i class="fa fa-github"></i>mateusnobrest</li>
                     </ul>
                 </div>
                 <div class="skills">
@@ -39,36 +46,36 @@
             </section>
         </section>
         <section class="right-section">
-            <div class="right-section-contents">
+           <div class="right-section-contents">
                 <section class="about gap">
                     <div class="right-title">ABOUT ME</div>
-                    <br><br>
+
                     <p class="about-me-contents">
                         I am a Front-end Developer with hands-on experience in React and JavaScript, to design web applications. What started with a simple 'Hello World' has become a fully-fledged passion that only gets more and more exciting.
                     </p>   
                 </section>
-            </div>
+            
             <section class="experience gap">
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-company-name">GOOGLE</p>
                         <p class="exp-time-period">2021-Present</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-position">SOFTWARE Engineer</p>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades 01
+                            Front-end Developer
                         </p>
                     </div>
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-company-name">GRUPO GLOBO</p>
                         <p class="exp-time-period">2017-2020</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-position">SOFTWARE ENGINEER</p>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades 02
+                            Front-end Developer
                         </p>
                     </div>
                 </div>
@@ -77,22 +84,36 @@
                 <div class="right-title">Education</div>
                 <div class="education-contents">
                     <div class="education-left">
-                        <p class="education-school-name">Faculdade 01</p>
+                        <p class="education-school-name">UFPE</p>
                         <p class="education-time-period">2021-Present</p>
                     </div>
                     <div class="education-right">
-                        <p class="education-subject">Nome do Curso</p>
-                        <p class="education-desc">Descreva aqui as principais atividades</p>
+                        <p class="education-subject">SOFTWARE ENGINEERING</p>
+                        <p class="education-desc">Associate of Internet Systems, 2021</p>
                     </div>
                     <div class="education-left">
-                        <p class="education-school-name">Curso 02</p>
+                        <p class="education-school-name">UNICAP</p>
                         <p class="educationp-time-period">2017-2020</p>
                     </div>
                     <div class="education-right">
-                        <p class="education-subject">Escreva aqui no que se especializou</p>
-                        <p class="education-desc">Descreva aqui as principais atividades 02</p>
+                        <p class="education-subject">Internet Systems</p>
+                        <p class="education-desc">Graduate Course</p>
                     </div>
                 </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Experiences</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                    <p class="awards-company-name">EBAC</p>
+                    <p class="awards-time-period">May 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Journey Dev</p>
+                        <p class="awards-desc">Issued may 2022</p>
+                    </div>
+                </div>
+            </div>
             </section>
         </section>
     </main>
